--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,9 @@
 
     {{content-for "head"}}
 
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend-loket.css">
+    <link rel="icon" href="{{rootURL}}assets/images/favicon.svg">
+
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend-toevla-data-entry.css">
 
